test/functions/varargs/constInVarargsQuery.good
constInVarargsQuery.chpl:2: In function 'myPrintln':
constInVarargsQuery.chpl:7: error: cannot assign to const variable
  constInVarargsQuery.chpl:12: called as myPrintln(args(0): int(64), args(1): real(64), args(2): string)
